--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ model/
 *.gguf2.index.json.gz.part
 *.gguf2.index.json.gz.part.1
 *.gguf2.index.json.gz.part.2
+
+
+unsloth_compiled_cache/
+outputs_vision/
